--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="div_g">
-        <img id="img_1" src="./assets/logo.png" alt="my Logo" draggable="false" />
+        <img id="img_1" src="./logo.png" alt="my Logo" draggable="false" />
         <div class="container_1">
             <ul>
                 <li class="item active">Home</li>
